--- a/task_level/docker-compose.yaml
+++ b/task_level/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
 
   back:
     build: .
-    command: sh -c "python3 manage.py createsuperuser && python3 manage.py migrate && gunicorn task_level.wsgi:application --workers 2 --bind 0.0.0.0:8000 "
+    command: sh -c "python3 manage.py migrate && gunicorn task_level.wsgi:application --workers 2 --bind 0.0.0.0:8000 "
     restart: always
     volumes:
       - ../static/:/code/static/
